--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,10 +1,12 @@
 <!--TODO: Define click callback to load about me information-->
-<button class="btn btn-light">Load info about me</button>
+<button class="btn btn-light" (click)="aboutMe()">Load info about me</button>
 <!--TODO: replace ??? to bind to name-->
-<h3>Logged in user: ???</h3>
+<h3>Logged in user: {{ name }}</h3>
 <!--TODO: bind img src's to profile_pic-->
-<img src="../../../assets/unknown.jpg">
+<img src="{{ profile_pic }}" />
 <p>
-	<!--TODO: bind link's href to profile_link-->
-	<a class="btn btn-light" target="_blank">Open profile on Spotify</a>	
+  <!--TODO: bind link's href to profile_link-->
+  <a class="btn btn-light" target="_blank" [href]="profile_link"
+    >Open profile on Spotify</a
+  >
 </p>
