--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,12 +1,40 @@
-<h1>Search Spotify</h1>
-<!--TODO: bind input's model to searchString-->
-<input>
-<!--TODO: bind select's model to searchCategory-->
-<select>
-	<!--TODO: loop over searchCategories to create dropdown options-->
-	<!--populate body and text value https://www.w3schools.com/tags/att_option_selected.asp-->
-</select>
-<!--TODO: Call search function when the button is clicked-->
-<button class="btn btn-light">Search</button>
-<!--TODO: Display a carousel component if searching for an artist or album. Bind carousel's resources and give it a static carouselId.-->
-<!--TODO: Display a track-list component if searching for a track. Bind track-list's tracks.-->
+<div
+  *ngIf="resources"
+  id="{{ carouselId }}"
+  class="carousel slide carousel-fade"
+  data-ride="carousel"
+  data-pause="false"
+  data-interval="3000"
+>
+  <div class="carousel-inner">
+    <!--TODO: edit *ngFor to populate carousel with carousel-card components.-->
+    <!--carousel-card can bind a single resource as an Input.-->
+    <!--"let first=first" sets the "first" variable to be true for the first card in the carousel. The [ngClass] assigns the active property to it-->
+    <!--https://stackoverflow.com/questions/44288434/angular-2-ngfor-first-last-index-loop-->
+    <app-carousel-card
+      *ngFor="let r of resources; let first = first"
+      class="carousel-item"
+      [ngClass]="{ active: first }"
+      [resource]="r"
+    >
+    </app-carousel-card>
+  </div>
+  <a
+    class="carousel-control-prev"
+    href="#{{ carouselId }}"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#{{ carouselId }}"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
