--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -1,30 +1,38 @@
 <table class="table table-sm table-light table-striped" *ngIf="tracks">
-	<thead>
-		<tr>
-			<th scope="col">#</th>
-			<th scope="col">Track</th>
-			<th scope="col">Duration</th>
-			<!--TODO: Use *ngIf to hide if hideArtist is true-->
-			<th scope="col">Primary Artist</th>
-			<!--TODO: Use *ngIf to hide if hideAlbum is true-->
-			<th scope="col">Album</th>
-		</tr>
-	</thead>
-	<tbody>
-		<!--TODO: Use *ngFor to loop over tracks-->
-		<tr>
-			<!--TODO: Populate with row index (start with 1!)-->
-			<td>???</td>
-			<td>
-				<!--TODO: link to the endpoint for that track, display the track's name-->
-				<a>???</a>
-			</td>
-			<!--TODO: display the track's duration-->
-			<td>???</td>
-			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td><a></a></td>
-			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td><a></a></td>
-		</tr>
-	</tbody>
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Track</th>
+      <th scope="col">Duration</th>
+      <!--TODO: Use *ngIf to hide if hideArtist is true-->
+      <th scope="col" *ngIf="!hideArtist">Primary Artist</th>
+      <!--TODO: Use *ngIf to hide if hideAlbum is true-->
+      <th scope="col" *ngIf="!hideAlbum">Album</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!--TODO: Use *ngFor to loop over tracks-->
+    <tr *ngFor="let track of tracks; let i = index">
+      <!--TODO: Populate with row index (start with 1!)-->
+      <td>{{ i + 1 }}</td>
+      <td>
+        <!--TODO: link to the endpoint for that track, display the track's name-->
+        <a href="/track/{{ track.id }}">{{ track.name }}</a>
+      </td>
+      <!--TODO: display the track's duration-->
+      <td>{{ track.durationStr }}</td>
+      <!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
+      <td>
+        <a *ngIf="!hideArtist" href="/artist/{{ track.primaryArtist.id }}">
+          {{ track.primaryArtist.name }}
+        </a>
+      </td>
+      <!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
+      <td>
+        <a *ngIf="!hideAlbum" href="/album/{{ track.album.id }}">
+          {{ track.album.name }}
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
