--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -1,39 +1,45 @@
 <div *ngIf="artist" class="row">
-	<div class="col-6">
-		<!--TODO: populate with artist name-->
-		<h1></h1>
-		<!--TODO: populate with artist image URL-->
-		<img id="artistImg" src="../../../assets/unknown.jpg">
-		<p>
-			<!--TODO: link to artist page on spotify, display artist name-->
-			<a class="btn btn-light" role="button" target="_blank">Open ??? on Spotify</a>
-		</p>
-	</div>
-	<div class="col-2">
-		<h3>Genres</h3>
-		<ul>
-			<!--TODO: loop over artist's genres and display them-->
-			<li>???</li>
-		</ul>
-		<p>
-		</p>
-	</div>
-	<div class="col-4">
-		<!--TODO: display artist name-->
-		<h3>???'s Top Tracks</h3>
-		<!--TODO: display the artist's top tracks-->
-	</div>
+  <div class="col-6">
+    <!--TODO: populate with artist name-->
+    <h1>{{ artist.name }}</h1>
+    <!--TODO: populate with artist image URL-->
+    <img id="artistImg" [src]="artist.imageURL" />
+    <p>
+      <!--TODO: link to artist page on spotify, display artist name-->
+      <a class="btn btn-light" role="button" target="_blank" [href]="artist.url"
+        >Open {{ artist.name }} on Spotify</a
+      >
+    </p>
+  </div>
+  <div class="col-2">
+    <h3>Genres</h3>
+    <ul>
+      <!--TODO: loop over artist's genres and display them-->
+      <li *ngFor="let g of artist.genres">{{ g }}</li>
+    </ul>
+    <p></p>
+  </div>
+  <div class="col-4">
+    <!--TODO: display artist name-->
+    <h3>{{ artist.name }}'s Top Tracks</h3>
+    <!--TODO: display the artist's top tracks-->
+    <app-track-list [tracks]="topTracks"></app-track-list>
+  </div>
 </div>
 
 <div *ngIf="artist" class="row">
-	<div class="col-6">
-		<!--TODO: display artist name-->
-		<h3>???'s Albums</h3>
-		<!--TODO: Display a carousel component for the artist's albums. Bind carousel's resources and give it a static carouselId.-->
-	</div>
-	<div class="col-6">
-		<h3>Similar Artists</h3>
-		<!--TODO: Display a carousel component for similar artists. Bind carousel's resources and give it a static carouselId.-->
-	</div>
-
+  <div class="col-6">
+    <!--TODO: display artist name-->
+    <h3>{{ artist.name }}'s Albums</h3>
+    <!--TODO: Display a carousel component for the artist's albums. Bind carousel's resources and give it a static carouselId.-->
+    <app-carousel carouselId="randomtext2" [resources]="albums"></app-carousel>
+  </div>
+  <div class="col-6">
+    <h3>Similar Artists</h3>
+    <!--TODO: Display a carousel component for similar artists. Bind carousel's resources and give it a static carouselId.-->
+    <app-carousel
+      carouselId="randomtext3"
+      [resources]="relatedArtists"
+    ></app-carousel>
+  </div>
 </div>
