--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,21 +1,35 @@
+<script src="https://sdk.scdn.co/spotify-player.js"></script>
 <div *ngIf="album" class="row">
-	<div class="col-6">
-		<!--TODO: populate with album name-->
-		<h1>???</h1>
-		<!--TODO: set src to album image URL-->
-		<img id="albumImg">
-		<!--TODO: loop over album artists-->
-		<p>
-			<!--TODO: link to artist page, display artist name-->
-			Artist: <a>???</a>
-		</p>
-		<p>
-			<!--TODO: link to artist page on spotify, display artist name-->
-			<a class="btn btn-light" role="button" target="_blank" >Open ??? on Spotify</a>
-		</p>
-	</div>
-	<div class="col-6">
-		<h3>Album Tracks</h3>
-		<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
-	</div>
+  <div class="col-6">
+    <!--TODO: populate with album name-->
+    <h1>{{ album.name }}</h1>
+    <!--TODO: set src to album image URL-->
+    <img id="albumImg" [src]="album.imageURL" />
+    <!--TODO: loop over album artists-->
+    <div *ngFor="let a of album.artists">
+      <p>
+        <!--TODO: link to artist page, display artist name-->
+        Artist: <a href="/artist/{{ a.id }}">{{ a.name }}</a>
+      </p>
+      <p>
+        <!--TODO: link to artist page on spotify, display artist name-->
+        <a
+          class="btn btn-light"
+          role="button"
+          target="_blank"
+          [href]="album.url"
+          >Open {{ a.name }} on Spotify</a
+        >
+      </p>
+    </div>
+  </div>
+  <div class="col-6">
+    <h3>Album Tracks</h3>
+    <!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
+    <app-track-list
+      [tracks]="tracks"
+      hideArtist="true"
+      hideAlbum="true"
+    ></app-track-list>
+  </div>
 </div>
